Changes in source to set version 1.2

--- a/src/stylesheets/less/Lungo.theme.default.less
+++ b/src/stylesheets/less/Lungo.theme.default.less
@@ -8,7 +8,7 @@
  */
 
 @import "mixins.less";
-@import "Lungo.theme.pro.font.css";
+@import "Lungo.theme.default.font.css";
 
 @theme:  #05b8e2;
 	@theme-light: #05bde9;
