--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -25,21 +25,28 @@ section {
 	
 	.transform(translate3d(100%, 0, 0));
 	-webkit-backface-visibility: hidden;
-	-webkit-transition: -webkit-transform 250ms @defaultTrasition;	
-	
+	-webkit-transition: -webkit-transform 250ms @defaultTrasition;
+	/*
+	   -moz-transition: @keyframe @defaultTrasition;
+         -o-transition: @keyframe @defaultTrasition;
+            transition: @keyframe @defaultTrasition;
+	*/
 	&:first-child, &.show {	.transform(translate3d(0%, 0, 0)); }
 	&.hide { .transform(translate3d(-100%, 0, 0)); }
 	
 	&.pop {
     	.transform(scale(0.5));
+    	z-index: 0;
     	opacity: 0;
 		-webkit-transition: all 250ms @defaultTrasition;
 		
 		&:first-child, &.show {	
+			z-index: 1;
 			.transform(scale(1));
 			opacity: 1;
 		}
 		&.hide { 
+			z-index: 0;
 			.transform(scale(1.2));
 			opacity: 0;
 		}
