Some changes in stylesheets & <markup/>

--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -1,7 +1,7 @@
-@import "Lungo.theme.default.font.css";
-/** 
+@import "lungo.theme.default.font.css";
+/**
  * Stylesheet
- * 
+ *
  * @namespace LUNGO.Theme
  * @class Default
  *
