--- a/src/stylesheets/less/Lungo.theme.default.less
+++ b/src/stylesheets/less/Lungo.theme.default.less
@@ -1,6 +1,6 @@
-/** 
+/**
  * Stylesheet
- * 
+ *
  * @namespace LUNGO.Theme
  * @class Default
  *
@@ -8,7 +8,7 @@
  */
 
 @import "mixins.less";
-@import "Lungo.theme.default.font.css";
+@import "lungo.theme.default.font.css";
 
 @theme:  #05b8e2;
 	@theme-light: #05bde9;
@@ -23,17 +23,17 @@
     background: @black;
     font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
-	
+
 /* @group <header> & <footer> & <article> */
 header {
 	background-color: @theme;
-	border-top: 1px solid @theme-light;	
+	border-top: 1px solid @theme-light;
 	border-bottom: 1px solid @theme-dark;
 	box-shadow: 0 1px 0 rgba(0,0,0,0.1);
 }
-	
+
 footer {
-	background: @theme-secondary -webkit-gradient(linear, left top, left bottom, color-stop(0.25, @theme-secondary), color-stop(1, @theme-secondary-dark));	
+	background: @theme-secondary -webkit-gradient(linear, left top, left bottom, color-stop(0.25, @theme-secondary), color-stop(1, @theme-secondary-dark));
 	border-top: 1px inset @theme-secondary-dark;
 }
 
@@ -42,8 +42,8 @@ footer {
 	text-shadow: 0px 1px 0px rgba(0,0,0,0.2);
 }
 
-article { 
-	background-color: #ededed; 	
+article {
+	background-color: #ededed;
 	& .title {
     	color: #797979;
     	text-shadow: 0px 1px 0px #fff;
@@ -52,14 +52,14 @@ article {
 /* @end */
 
 /* @group <nav> */
-nav a { 
-	color: rgba(255,255,255,0.5); 	
-	
+nav a {
+	color: rgba(255,255,255,0.5);
+
 	&.current, &.active {  color: @white; }
 }
 
-.toolbar a {  
-	color: rgba(255,255,255,0.2); 
+.toolbar a {
+	color: rgba(255,255,255,0.2);
 	&.current, &.active {
 		background: #1c1c1c;
 		box-shadow: inset 0px 0px 8px #101010;
@@ -70,7 +70,7 @@ nav a {
 .groupbar {
     background: #ededed;
     border-bottom: solid 1px rgba(0,0,0,0.1);
-    
+
     & a {
     	color: #6e6e6e;
     	&.current {
@@ -84,30 +84,30 @@ nav a {
 /* @group <aside> */
 aside {
     background: #252525;
-    
+
     & .title {
     	background: #101010;
     	border:  none;
 	}
-    
+
     & a {
     	color: #fff;
-	    text-shadow: 0px 1px 0px #000;    
+	    text-shadow: 0px 1px 0px #000;
 	    border-bottom: 1px inset #101010;
 		border-top: 1px inset #868686;
-		
+
 		&.current {
     		background: #1c1c1c;
 			box-shadow: inset 0px 0px 8px #101010;
 			border-top: 1px inset #1c1c1c;
 		}
-		
+
 		& .icon {
-    		text-shadow: none; 
+    		text-shadow: none;
 			color: #7a7a7a;
 		}
 	}
-	
+
 	& .anchor {
     	background: #101010;
 		color:  #7a7a7a;
@@ -118,7 +118,7 @@ section.aside {
     box-shadow: -4px 0 8px rgba(0,0,0,0.5);
 	&.onright { box-shadow: 4px 0 8px rgba(0,0,0,0.5); }
 }
-	
+
 @media handheld, only screen and (min-width: 768px) {
 	section.current, section.show {
 	    box-shadow: -4px 0 8px rgba(0,0,0,0.5);
@@ -137,58 +137,58 @@ section.aside {
 		border-bottom: 1px inset #e1e1e1;
 
 		&:last-child { border-bottom: none; }
-		
+
 		&.selectable:active {
     		background: @theme-highlight;
 			color: @theme-highlight-color;
 			text-shadow: @theme-highlight-text-shadow;
-			
+
 			& small, & .onright:not(.bubble) {
     			color: @white;
     			text-shadow: none;
-			} 
+			}
 		}
-		
+
 		& small, & .onright:not(.bubble) { color: #888; }
-	} 
-		
-	&.indented li { 
+	}
+
+	&.indented li {
 		border-left: solid 1px #e1e1e1;
 		border-right: solid 1px #e1e1e1;
-		
+
 		&:first-child { border-top: solid 1px #e1e1e1; }
 		&:last-child { border-bottom: solid 1px  #e1e1e1; }
 	}
-	
+
     & .anchor {
 		background: @theme-highlight;
 		color: @theme-highlight-color;
 		text-shadow: @theme-highlight-text-shadow;
 		border: none;
 	}
-	
-	& .tip { color: #7a7a7a; 
+
+	& .tip { color: #7a7a7a;
 		&.darker {
-			background-color: #2c2c2d;	
+			background-color: #2c2c2d;
 			color: #fff;
 			text-shadow: 0px 1px 0px #000;
-			
+
 			& a { color: #fff !important; }
 		}
-		
+
 		&.dark {
 		    background-color: #f4f4f4;
-			box-shadow: inset 0px 1px 0px #fff;			
+			box-shadow: inset 0px 1px 0px #fff;
 			text-shadow: 0px 1px 0px #fff;
 		}
-	}	
-	
+	}
+
 	& .toolbar {
 		border-bottom-color: rgba(0,0,0,0.2);
-		
-		& .toolbar a { 
-			box-shadow: 1px 0px 0px #d9d9d9; 
-			
+
+		& .toolbar a {
+			box-shadow: 1px 0px 0px #d9d9d9;
+
 			&:last-child { box-shadow: none; }
 			&.current {
 				background: transparent;
@@ -202,9 +202,9 @@ section.aside {
 /* @end */
 
 /* @group widgets */
-.splash { 
+.splash {
 	background: @theme-dark;
-	color: #fff; 
+	color: #fff;
 	text-shadow: 0px 1px 0px rgba(0,0,0,0.2);
 }
 
@@ -212,24 +212,24 @@ section.aside {
 
 /* @group .button */
 .button {
-	border-bottom: 1px inset rgba(0,0,0,0.2);		
+	border-bottom: 1px inset rgba(0,0,0,0.2);
 	.border-radius(2px);
-	-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), 0 1px 3px rgba(0,0,0,0.2);	
-	
-	&:active, &.active { 
+	-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), 0 1px 3px rgba(0,0,0,0.2);
+
+	&:active, &.active {
 		-webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.1), inset 0 0 2px rgba(0,0,0,0.2);
 		border-bottom-color: rgba(0,0,0,0);
 	}
-	
-	header &:active, footer &:active, 
+
+	header &:active, footer &:active,
 	header &:active, footer &:active {
     	height: 29px;
 		position: relative;
-		top:  1px; 
+		top:  1px;
 	}
-	
+
 	&.default {
-    	background: #5a5a5a;    	
+    	background: #5a5a5a;
     	&:active, &.active { background: #4b4b4b; }
 	}
 }
@@ -241,8 +241,8 @@ input, textarea, select {
 	color: #858585;
 	font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
-	
-input:focus, textarea:focus, select:focus { 
+
+input:focus, textarea:focus, select:focus {
 	border-color: @theme;
 	color:  @theme;
 }
@@ -252,7 +252,7 @@ label {
 	text-transform: uppercase;
 	font-weight: bold;
 }
-	
+
 .select:after {
 	background: #858585;
 	color: white;
@@ -262,12 +262,12 @@ input[type="checkbox"] + span, input[type="radio"] + span {
 	color: #fff;
 	background: #a0a0a0;
 }
-	input[type="checkbox"] + span::before, 
+	input[type="checkbox"] + span::before,
 	input[type="radio"] + span::before {
 		background: #c1c1c1;
 	}
-	
-	input[type="checkbox"]:checked + span, 
+
+	input[type="checkbox"]:checked + span,
 	input[type="radio"]:checked + span {
 		background: @theme-dark;
 	}
@@ -275,7 +275,7 @@ input[type="checkbox"] + span, input[type="radio"] + span {
 /* @group range */
 input[type="range"] {
 	background-color: #c7c7c7;
-	
+
 	&:active { background-color: #34b7dc; }
 	&::-webkit-slider-thumb {
 		border: solid 7px rgba(255,255,255, 0.5);
@@ -295,13 +295,13 @@ input[type="range"] {
     	line-height: 18px;
     	color: #858585;
 	}
-	
+
     & .bar {
 		background: #c7c7c7;
-		
+
     	& .value {
-			background: #34b7dc;	
-	    
+			background: #34b7dc;
+
 	    	& .glow {
 				background-color: rgba(255,255,255,0.25);
 	    		box-shadow: 0px 0px 3px #34b7dc;
@@ -319,7 +319,7 @@ input[type="range"] {
 	.border-radius(2px);
 	text-shadow: none;
 	font-weight: bold !important;
-}	
+}
 	header .bubble.count {background: @theme-secondary;}
 	.bubble.count { background: @theme; }
 /* @end */
