--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -21,8 +21,9 @@ section {
 	top:  0px;
 	width: 100%;
 	height: 100%;
-	z-index: 1;
 	
+	//display: none;
+	z-index: 1;
 	.transform(translate3d(100%, 0, 0));
 	-webkit-backface-visibility: hidden;
 	-webkit-transition: -webkit-transform 250ms @defaultTrasition;
@@ -31,8 +32,14 @@ section {
          -o-transition: @keyframe @defaultTrasition;
             transition: @keyframe @defaultTrasition;
 	*/
-	&:first-child, &.show {	.transform(translate3d(0%, 0, 0)); }
-	&.hide { .transform(translate3d(-100%, 0, 0)); }
+	&:first-child, &.show {	
+		.transform(translate3d(0%, 0, 0)); 
+		//display: block; 
+		}
+	&.hide { 
+		.transform(translate3d(-100%, 0, 0)); 
+		//display: none;
+		}
 	
 	&.pop {
     	.transform(scale(0.5));
