Redistribute colors in constants.less

--- a/src/stylesheets/less/constants.less
+++ b/src/stylesheets/less/constants.less
@@ -1,3 +1,12 @@
+@import "mixins.less";
+
+/* @group DIMENSIONS */
+
+@header-height: 42px;
+
+/* @end */
+
+
 
 @defaultTrasition : @easeOutSine;
 
@@ -5,4 +14,53 @@
 	@header_extended_height: 74px;
 @footer_toolbar_height: 48px;
 
-@header-height: 38px;
+
+/* @group COLORS */
+
+@white:             #fff;
+@black:				#000;
+@black-active:		#000;
+
+@grey:       		#ccc;
+@grey-active:		#b5b5b5;
+
+@red:         		#e33100;
+@red-active:        #c5280f;
+
+@lightgreen:        #91bd09;
+@lightgreen-active: #7ea41a;
+
+@green:         	#009600;
+@green-active:      #00770e;
+
+@blue:         		#237fd7;
+@blue-active:       #1a69b6;
+
+@arcticblue:        #2daebf;
+@arcticblue-active: #238e9e;
+
+@orange:         	#ff5c00;
+@orange-active:     #da4e15;
+
+@purple:         	#7b658d;
+@purple-active:     #574765;
+
+@magenta:         	#a9014b;
+@magenta-active:    #831239;
+
+@pink:         		#ff007f;
+@pink-active:       #de2870;
+
+@yellow:         	#ffb515;
+@yellow-active:     #dfa020;
+
+@twitter:        	#35cdff;
+@twitter-active:    #2bafda;
+
+@facebook:         	#3b5998;
+@facebook-active:   #2c4579;
+
+/* @end */
+
+
+
