--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -113,7 +113,7 @@ header, footer  {
 	display: block;
 	
 	z-index: 2;
-	line-height: 39px;
+	line-height: @header-height;
 }
 
 header  {
@@ -145,7 +145,7 @@ header .title {
 }
 
 section header a.button, section footer a.button  {
-	margin: 3px 1px 0px;
+	margin: 5px 1px 0px;
 	/*
 	&:first-of-type { margin-left: 4px; }	
 	&:last-child { margin-right: 4px; }
