--- a/src/stylesheets/less/Lungo.layout.nav.less
+++ b/src/stylesheets/less/Lungo.layout.nav.less
@@ -7,12 +7,11 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 
+@import "constants.less";
 @import "mixins.less";
 
-@defaultTrasition : @easeOutSine;
 @header_footer_height: 40px;
 	@header_extended_height: 74px;
-@footer_toolbar_height: 48px;
 
 /* @group <nav> */
 nav {
@@ -56,25 +55,29 @@ nav {
 }
 
 .toolbar {
-	height: @footer_toolbar_height;
-	display: block;
+	height: @toolbar-height;
 	
-	& nav { display: block; }
-	& a { padding: 0; }
+	& nav {
+		margin: 2px;
+		display: block;
+	}
+	& a { 
+		padding: 0; 
+		height:  47px;
+	}
 	& .icon {
     	display: block;
     	top:  0px;
-    	font-size: 32px;
-		line-height: @footer_toolbar_height;
+    	font-size: 34px;
+    	line-height: 34px;
 	}
 	
 	&.with-labels .icon {
-    	line-height: 36px;
 		padding-bottom: 12px;
 	}
 	
 	& .bubble {
-    	top:  -52px;
+    	top:  -44px;
 	    left: 4px;
 	}
 	
