--- a/src/stylesheets/less/Lungo.widgets.colour.less
+++ b/src/stylesheets/less/Lungo.widgets.colour.less
@@ -1,12 +1,13 @@
-/** 
+/**
  * Stylesheet
- * 
+ *
  * @namespace LUNGO.Widgets
  * @class Colour
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 
+@import "constants.less";
 @import "mixins.less";
 
 a.grey, .grey{background-color: @grey;}
