--- a/src/stylesheets/less/Lungo.widgets.form.less
+++ b/src/stylesheets/less/Lungo.widgets.form.less
@@ -1,6 +1,6 @@
-/** 
+/**
  * Stylesheet
- * 
+ *
  * @namespace LUNGO.Widgets
  * @class Form
  *
@@ -8,11 +8,11 @@
  */
 
 @import "mixins.less";
+@import "constants.less";
 
-@defaultTrasition : @easeOutSine;
 
 .form {
-	
+
 }
 
 label {
@@ -20,41 +20,41 @@ label {
     line-height: 27px;
 }
 
-input:not([type=checkbox]), textarea, select {  
-	display: inline-block; 
+input:not([type=checkbox]), textarea, select {
+	display: inline-block;
 	padding: 5px;
 	width: 95%;
 	margin-bottom: 2px;
-	
-	outline: none; 	
+
+	outline: none;
 	-webkit-appearance: none;
 	border-radius: 0px;
 	font-size:  15px;
 	line-height: 15px;
 	font-weight: bold;
-	
+
 	-webkit-user-select: text;
 }
 
 /* @group search */
 input[type=search] {
 	width: 86%;
-	
+
 	& + .button {
     	float: right;
 	    padding: 0px;
 	    width: 32px;
 	    height: 30px;
-	    
+
 	    & .icon {
-    		font-size: 22px !important;	    
+    		font-size: 22px !important;
 	    	line-height: 30px;
-		}    
+		}
 	}
 }
 /* @end */
 
-select { 
+select {
 	width: 100%;
 	height: 29px;
 }
@@ -65,7 +65,7 @@ label.select {
     width: 100%;
 	padding-top: 2px;
 }
-    
+
 .select:after {
 	text-align: center;
 	position: absolute;
@@ -74,13 +74,13 @@ label.select {
 	bottom: 0;
 	height:29px;
 	width: 29px;
-	
-	content: "▼";     
-	pointer-events:none;	
+
+	content: "▼";
+	pointer-events:none;
 	line-height: 32px;
 	margin-top: 2px;
 }
-    
+
 .no-pointer-events .select:after {
 	content: none;
 }
@@ -204,12 +204,12 @@ input[type="range"] {
 	margin-bottom: 4px !important;
 	border: 0;
 	cursor: ew-resize;
-	
+
 	&::-webkit-slider-thumb {
-		-webkit-appearance:	none;	
+		-webkit-appearance:	none;
 		position: relative;
 		z-index: 1;
-	
+
 		width: 24px;
 		height: 24px;
 		border-radius: 12px;
@@ -220,22 +220,22 @@ input[type="range"] {
 /* @group progress */
 .progress {
     width: 100%;
-    
+
     .labels {
     	display: block;
 		& span:last-child { float: right; }
 	}
-	
+
     & .bar {
 		height:  3px;
 		display: block;
-		
+
     	& .value {
 			display:block;
 	    	height: inherit;
 	    	width: 0%;
-	    	-webkit-transition: width 500ms @defaultTrasition;	
-	    	
+	    	-webkit-transition: width 500ms @defaultTrasition;
+
 	    	& .glow {
 				float:right;
 				height: inherit;
@@ -247,6 +247,6 @@ input[type="range"] {
 /* @end */
 
 
-@media screen and (-webkit-min-device-pixel-ratio:0) { 
+@media screen and (-webkit-min-device-pixel-ratio:0) {
 	.custom-select select {padding-right:30px;}
 }
