--- a/src/stylesheets/less/constants.less
+++ b/src/stylesheets/less/constants.less
@@ -3,10 +3,10 @@
 /* @group DIMENSIONS */
 
 @header-height: 42px;
+@toolbar-height: 51px;
+
 
 /* @end */
-
-
 
 @defaultTrasition : @easeOutSine;
 
@@ -61,6 +61,3 @@
 @facebook-active:   #2c4579;
 
 /* @end */
-
-
-
