--- a/src/stylesheets/less/Lungo.layout.less
+++ b/src/stylesheets/less/Lungo.layout.less
@@ -7,8 +7,8 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 
-@import "mixins.less";
 @import "constants.less";
+@import "mixins.less";
 
 /* @group <section> */
 section {
@@ -107,17 +107,17 @@ section {
 header, footer  {
 	position: absolute;
 	left: 0px;
-	width: 100%;
-	//height: 38px;
-	height: @header-height;
-	display: block;
+	width: 100%;	
+	overflow: hidden;
 	
 	z-index: 2;
-	line-height: @header-height;
 }
 
 header  {
 	top: 0px;
+	height: @header-height;
+	line-height: @header-height;
+	
 	//&.extended { height: 72px; }
 	& .onleft { margin-left: 4px !important;}
 	& .onright {margin-right: 4px !important;}
