--- a/src/stylesheets/less/Lungo.theme.default.less
+++ b/src/stylesheets/less/Lungo.theme.default.less
@@ -7,8 +7,8 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 
-@import "mixins.less";
 @import "constants.less";
+@import "mixins.less";
 
 @import "lungo.theme.default.font.css";
 
@@ -34,13 +34,9 @@ header {
 	//border-bottom: 1px solid @theme-dark;
 	//box-shadow: 0 1px 0 rgba(0,0,0,0.1);
 	
-	//height: 45px;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
-	-webkit-border-top-left-radius: 5px;
-	-webkit-border-top-right-radius: 5px;
-	-moz-border-radius-topleft: 5px;
-	-moz-border-radius-topright: 5px;
+	
 	background: #2c8bca;
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#2c8bca), color-stop(100%,#154f93));
 	background: -webkit-linear-gradient(top,  #2c8bca 0%,#154f93 100%);
@@ -55,10 +51,14 @@ header {
 }
 
 footer {
-	background: @theme-secondary -webkit-gradient(linear, left top, left bottom, color-stop(0.25, @theme-secondary), color-stop(1, @theme-secondary-dark));
-	border-top: 1px inset @theme-secondary-dark;
+	background: #353b42 -webkit-gradient(linear, left top, left bottom, color-stop(0, #353b42), color-stop(0.75, #272a2d));
+	
+	border-top: 1px inset #2A2A2A;
+	color: #353b42;
+	
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
 }
-
 .title {
 	color: @white;
 	text-shadow: 0px 1px 0px rgba(0,0,0,0.2);
@@ -76,18 +76,21 @@ article {
 /* @group <nav> */
 nav a {
 	color: rgba(255,255,255,0.5);
-
 	&.current, &.active {  color: @white; }
 }
 
 .toolbar a {
-	color: rgba(255,255,255,0.2);
+	color: #cdd9e3;
+	.border-radius(4px);
+	font-weight: bold;
+		
 	&.current, &.active {
-		background: #1c1c1c;
-		box-shadow: inset 0px 0px 8px #101010;
-		text-shadow: 0px 1px 4px #000;
+		background: #111;
+		box-shadow: inset 0 1px 1px rgba(0,0,0,1), -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05);
 	}
+	
 }
+
 
 .groupbar {
     background: #ededed;
@@ -336,10 +339,19 @@ input[type="range"] {
 
 .bubble {
 	color: #fff;
-	.border-radius(2px);
-	text-shadow: none;
+	.border-radius(7px);
+	text-shadow: 0 -1px 0 rgba(0,0,0,0.2);
 	font-weight: bold !important;
+	
+	border: solid 1px @white;
+	box-shadow: 0 0 6px #000;	
 }
-	header .bubble.count {background: @theme-secondary;}
-	.bubble.count { background: @theme; }
+	header .bubble.count {
+		background: @theme-secondary;
+	}
+	.bubble.count { 
+		//background: @theme; 
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#2c8bca), color-stop(100%,#154f93));
+		background: -webkit-linear-gradient(top,  #2c8bca 0%,#154f93 100%);
+	}
 /* @end */
