--- a/src/stylesheets/less/Lungo.widgets.less
+++ b/src/stylesheets/less/Lungo.widgets.less
@@ -1,12 +1,13 @@
-/** 
+/**
  * Stylesheet
- * 
+ *
  * @namespace LUNGO
  * @class Widgets
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 
+@import "constants.less";
 @import "mixins.less";
 
 /* @group scroll */
@@ -31,7 +32,7 @@
     & > * {
     	padding: 10px;
 	}
-	
+
 	&.rounded {
     	& ul { .border-radius(4px); }
     	& li {
@@ -73,8 +74,8 @@
 
 .bubble {
 	padding: 2px 3px 1px;
-	.border-radius(1px);		
+	.border-radius(1px);
 	font-size: 0.8em;
-	font-weight: bold;		
+	font-weight: bold;
 	line-height: 1.0em;
 }
