--- a/src/stylesheets/less/constants.less
+++ b/src/stylesheets/less/constants.less
@@ -3,8 +3,9 @@
 /* @group DIMENSIONS */
 
 @header-height: 42px;
-@toolbar-height: 51px;
-
+@with-labels-height: 51px;
+@article-bottom: 40px;
+	@article-bottom-with-labels: 52px;
 
 /* @end */
 
