--- a/src/stylesheets/less/Lungo.layout.article.less
+++ b/src/stylesheets/less/Lungo.layout.article.less
@@ -49,8 +49,8 @@ article {
 		
 header:not(.extended) ~ article { top: @header-height; }	
 	header.extended ~ article { top: @header_extended_height; }		
-footer:not(.toolbar) ~ article { bottom: @header_footer_height; }
-	footer.toolbar ~ article { bottom: @footer_toolbar_height; }
+footer:not(.with-labels) ~ article { bottom: @header-height; }
+	footer.with-labels ~ article { bottom: @article-bottom-with-labels; }
 
 @media handheld, only screen and (min-width: 768px) {
 	article.aside { .transform(translate3d(0px, 0, 0)); }
