--- a/src/stylesheets/less/Lungo.layout.nav.less
+++ b/src/stylesheets/less/Lungo.layout.nav.less
@@ -22,7 +22,6 @@ nav {
 		padding: 0 6px;
 		z-index: 1000;
 		float: left;
-		//line-height: 39px;
 
 		& .icon {
 			position: relative;
@@ -64,7 +63,7 @@ nav {
 
 	& a {
 		padding: 0;
-		height:  35px;
+		height:  36px;
 	}
 
 
@@ -106,14 +105,15 @@ nav {
 
 .groupbar {
 	position: absolute;
-	top: 39px;
+	top: 43px;
 	height: 28px;
+	display: block;
 	width: 100%;
 	padding: 4px 0 2px;
  	display: block;
     line-height: 28px;
     z-index: 2;
 
-    & a { padding: 0px; }
+    & a { padding: 0px; font-weight: bold;}
 }
 /* @end */
