--- a/src/stylesheets/less/Lungo.layout.article.less
+++ b/src/stylesheets/less/Lungo.layout.article.less
@@ -49,7 +49,7 @@ article {
 		
 header:not(.extended) ~ article { top: @header-height; }	
 	header.extended ~ article { top: @header_extended_height; }		
-footer:not(.with-labels) ~ article { bottom: @header-height; }
+footer:not(.with-labels) ~ article { bottom: @article-bottom; }
 	footer.with-labels ~ article { bottom: @article-bottom-with-labels; }
 
 @media handheld, only screen and (min-width: 768px) {
