--- a/src/stylesheets/less/Lungo.theme.default.less
+++ b/src/stylesheets/less/Lungo.theme.default.less
@@ -265,12 +265,16 @@ section.aside {
 /* @end */
 
 /* @group <inputs> */
+@box-shadow-form: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+@box-shadow-form-big: inset 0 2px 4px rgba(0, 0, 0, 0.2);
+
+
 input, textarea, select {
 	border: 1px solid #e1e1e1;
 	.border-radius(@border-radius);
 	color: #858585;
 	font-family: 'Roboto', Helvetica, Arial, sans-serif;
-	box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+	box-shadow: @box-shadow-form;
 	
 	&.underline {
 		border:  none;
@@ -297,11 +301,11 @@ label {
 	border-bottom-right-radius: @border-radius;
 }
 
+/* @group .range */
 input[type="checkbox"] + span, input[type="radio"] + span {
 	color: #fff;
 	background: #a0a0a0;	
-	
-		.border-radius(@border-radius);
+	.border-radius(@border-radius);
 }
 	input[type="checkbox"] + span::before,
 	input[type="radio"] + span::before {
@@ -311,16 +315,19 @@ input[type="checkbox"] + span, input[type="radio"] + span {
 
 	input[type="checkbox"]:checked + span,
 	input[type="radio"]:checked + span {
-		background: @background-main;
-		
+		background: @background-main;		
 		.border-radius(@border-radius);
 	}
+/* @end */
+
+
 
 /* @group range */
 input[type="range"] {
 	background-color: #c7c7c7;
 	.border-radius(@border-radius);
-	box-shadow: inset 0 2px 6px #666;
+	box-shadow: @box-shadow-form-big;
+	
 
 	&:active { 
 		box-shadow: none;
@@ -348,12 +355,21 @@ input[type="range"] {
 
     & .bar {
 		background: #c7c7c7;
-		box-shadow: inset 0 2px 6px #666;
+		box-shadow: @box-shadow-form-big;
 		.border-radius(@border-radius);
 
     	& .value {
 			background: @background-main;
-						.border-radius(@border-radius);
+			.border-radius(@border-radius);
+			
+			& .label {
+				float: right;
+				margin-right: 3px;
+				font-weight: bold;
+				color: rgba(0,0,0,0.6);
+				text-shadow: 0 1px 0 rgba(255,255,255,0.2) !important;
+				font-size: 12px;
+			}
 		}
 	}
 }
