--- a/src/stylesheets/less/Lungo.theme.default.less
+++ b/src/stylesheets/less/Lungo.theme.default.less
@@ -26,7 +26,8 @@
 @color-border-light: #64b9e2;
 
 @background-main: #2c8bca -webkit-gradient(linear, left top, left bottom, color-stop(0%,#2c8bca), color-stop(100%,#154f93));
-@background-secondary: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#2c8bca), color-stop(100%,#154f93));
+@background-secondary: #353b42 -webkit-gradient(linear, left top, left bottom, color-stop(0%, #353b42), color-stop(100%, #272a2d));
+	@background-secondary-footer: #353b42 -webkit-gradient(linear, left top, left bottom, color-stop(0%, #353b42), color-stop(50%, #272a2d));
 
 .app {
     background: @black;
@@ -45,11 +46,10 @@ header {
 	
 	position: absolute;
 	z-index: 2;
-	
 }
 
 footer {
-	background: #353b42 -webkit-gradient(linear, left top, left bottom, color-stop(0, #353b42), color-stop(0.75, #272a2d));
+	background: @background-secondary-footer;
 	
 	border-top: 1px inset #2A2A2A;
 	color: #353b42;
@@ -159,7 +159,7 @@ section.aside {
     & li {
 		background: #fff;
 		
-		//border-bottom: 1px inset #e1e1e1;
+		border-bottom: 1px inset #e1e1e1;
 		
 		
 		&:last-child { border-bottom: none; }
@@ -194,10 +194,15 @@ section.aside {
 
 	& .tip { 
 		color: #7a7a7a;
-		&.darker {
-			background-color: #2c2c2d;
+		&.theme {
+	color: #fff;
+			background: @background-main;
+			
+		}
+		&.dark {
+			background: @background-secondary;
 			color: #fff;
-			text-shadow: 0px 1px 0px #000;
+			text-shadow: 0px -1px 0px rgba(0,0,0,0.5);
 
 			& a { color: #fff !important; }
 		}
@@ -248,14 +253,9 @@ section.aside {
 	font-weight: bold;
 	text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
 	
-	&.big {
-    	-webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,0.25), inset 0 -3px 0 rgba(255,255,255, 0.05), 0 1px 2px rgba(0,0,0,0.3);
-	}
+	&.big { -webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,0.25), inset 0 -3px 0 rgba(255,255,255, 0.05), 0 1px 2px rgba(0,0,0,0.3); }
 	
-	&:active, &.active {
-		//-webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.1), inset 0 0 2px rgba(0,0,0,0.2);
-		-webkit-box-shadow: inset 0 29px 8px rgba(0,0,0,0.1);
-	}
+	&:active { -webkit-box-shadow: inset 0 29px 8px rgba(0,0,0,0.1); }
 
 	&.default {
     	background: #5a5a5a;
