New style for buttons

--- a/src/stylesheets/less/Lungo.theme.default.less
+++ b/src/stylesheets/less/Lungo.theme.default.less
@@ -248,14 +248,14 @@ section.aside {
 /* @group .button */
 .button {
 	.border-radius(@border-radius);
-	-webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,0.25), inset 0 -3px 0 rgba(255,255,255, 0.05);
-	
+	-webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,0.1), inset 0 1px 0 rgba(0,0,0,0.1), inset -1px 0 0 rgba(0,0,0,0.1), inset 0 -2px 0 rgba(0,0,0,0.25), inset 0 -3px 0 rgba(255,255,255, 0.05), 0 1px 2px rgba(0,0,0,0.3);
+
 	font-weight: bold;
 	text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
 	
-	&.big { -webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,0.25), inset 0 -3px 0 rgba(255,255,255, 0.05), 0 1px 2px rgba(0,0,0,0.3); }
-	
-	&:active { -webkit-box-shadow: inset 0 29px 8px rgba(0,0,0,0.1); }
+	&:active { 
+		-webkit-box-shadow: inset 0 10px 30px rgba(0,0,0,0.2), inset 0 -2px 4px rgba(0,0,0,0.3);
+	}
 
 	&.default {
     	background: #5a5a5a;
