--- a/src/stylesheets/less/Lungo.widgets.button.less
+++ b/src/stylesheets/less/Lungo.widgets.button.less
@@ -12,7 +12,8 @@
 
 a.button {
 	display: inline-block;
-	height: 30px;
+	height: 32px;
+	//min-width: 32px;
 	padding: 0 9px 0 8px;
 	color: #fff !important;
 	outline: none;
